[tool.poetry]
name = "redis-cached"
version = "0.4.4"
description = "Python cache decorator and other itils with support for Redis or KeyDB"
authors = ["Dmitry Babanov <85852989+dmitrybabanovforreal@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/dmitrybabanovforreal/redis-cached"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
redis = ">=4.5.5,<5.1.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pydantic = "^2.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
